added swagger UI documentation
